--- a/src/app/main/settings/privacySettings/privacySettings.html
+++ b/src/app/main/settings/privacySettings/privacySettings.html
@@ -210,14 +210,14 @@
                                    </div>
                                    <div ng-show="donotDisturb">
                                        <div class="col-md-12 margin-top-10 ">
-                                           <label style="margin-left: 15px" class="checkbox-inline" class="custon-text">
+                                           <label  class="checkbox-inline" class="custon-text">
                                                <input type="radio"  class="icheck" ng-click="editDonotDisturb(privacy.contact)" ng-model="privacy.contact" value="membership">
                                                Peoples matrimony.com can only call me on premium membership<i style="margin-left: 2px;" class="fa fa-question-circle"></i>
                                            </label>
                                        </div>
 
                                        <div class="col-md-12 margin-top-10 ">
-                                           <label style="margin-left: 15px" class="checkbox-inline" class="custon-text">
+                                           <label  class="checkbox-inline" class="custon-text">
                                                <input type="radio"  class="icheck" ng-click="editDonotDisturb(privacy.contact)" ng-model="privacy.contact" value="connet">
                                                Peoples matrimony.com can only call me on premium members who wish to connect with me<i style="margin-left: 2px;" class="fa fa-question-circle"></i>
                                            </label>
