--- a/src/app/main/settings/deactivateProfile/deactivateProfile.html
+++ b/src/app/main/settings/deactivateProfile/deactivateProfile.html
@@ -10,6 +10,7 @@
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
                     <div class="portlet light bordered border-rounded">
+                        <div class="col-md-12" style="text-align: center;color: red">{{deactivateMsg}}</div>
                         <div class="portlet-title">
                             <div class="caption ">
                                 <span class=" caption-subject  font-black  uppercase" style="font-weight: 600;">Deactivate profile</span>
@@ -31,19 +32,23 @@
 
                                 <div class="col-md-12 ">
                                     <label class="checkbox-inline" class="custon-text">
-                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        <input type="radio"  class="icheck " value="15" ng-model="deactivate"
+                                               >
                                         15 Days</label>
 
                                     <label class="checkbox-inline" class="custon-text">
-                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        <input type="radio"  class="icheck " value="30" ng-model="deactivate"
+                                              >
                                         1 Month</label>
 
                                     <label class="checkbox-inline" class="custon-text">
-                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        <input type="radio"  class="icheck " value="60" ng-model="deactivate"
+                                               >
                                         2 Months</label>
 
                                     <label class="checkbox-inline" class="custon-text">
-                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        <input type="radio"  class="icheck " value="90" ng-model="deactivate"
+                                               >
                                         3 Months</label>
                                 </div>
 
@@ -52,7 +57,7 @@
                             <div class="form-group ">
                                 <div class="col-md-offset-9 ">
                                     <button type="button" class=" btn red input-rounded uppercase"
-                                            ng-click="">
+                                            ng-click="deactivateProfile()">
                                         Deactivate profile
                                     </button>
                                 </div>
