--- a/src/app/main/settings/privacySettings/privacySettings.html
+++ b/src/app/main/settings/privacySettings/privacySettings.html
@@ -103,42 +103,42 @@
                                                                    <tr>
                                                                        <td width="30%" class="first-row">Age/Height</td>
                                                                        <td width="5%">:</td>
-                                                                       <td width="45%">25,5`7</td>
+                                                                       <td width="45%">{{profile.login_user.age}},{{profile.login_user.height}}</td>
                                                                    </tr>
                                                                    <tr>
                                                                        <td class="first-row">Religion</td>
                                                                        <td>:</td>
-                                                                       <td>Hindu</td>
+                                                                       <td>{{profile.login_user.religion}}</td>
                                                                    </tr>
                                                                    <tr>
                                                                        <td class="first-row">Mother Tongue</td>
                                                                        <td>:</td>
-                                                                       <td>Tamil</td>
+                                                                       <td>{{profile.login_user.mothertongue}}</td>
                                                                    </tr>
                                                                    <tr>
                                                                        <td class="first-row">Community</td>
                                                                        <td>:</td>
-                                                                       <td>Vaniyakullak Kshathriya</td>
+                                                                       <td> {{profile.login_user.caste}}</td>
                                                                    </tr>
                                                                    <tr>
                                                                        <td class="first-row">Star</td>
                                                                        <td>:</td>
-                                                                       <td>Swathi</td>
+                                                                       <td>{{profile.login_user.star}}</td>
                                                                    </tr>
                                                                    <tr>
                                                                        <td class="first-row">Education</td>
                                                                        <td>:</td>
-                                                                       <td>Btech</td>
+                                                                       <td>{{profile.login_user.education}}</td>
                                                                    </tr>
                                                                    <tr>
                                                                        <td class="first-row">Profession/Income</td>
                                                                        <td>:</td>
-                                                                       <td>Software engineer</td>
+                                                                       <td>{{profile.login_user.occupation}}/{{profile.login_user.income}}</td>
                                                                    </tr>
                                                                    <tr>
                                                                        <td class="first-row">Location</td>
                                                                        <td>:</td>
-                                                                       <td>Bangalore</td>
+                                                                       <td>{{profile.login_user.city_name}}</td>
                                                                    </tr>
                                                                </table>
                                                            </div>
