--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -1689,7 +1689,7 @@
                                                     ng-model="profile.login_user.preferences.mothertongue">
                                                 <option ng-repeat="obj in motherTongueList"
                                                         ng-selected="obj.mothertongue == profile.login_user.preferences.mothertongue"
-                                                        value="{{obj.mothertongue}}">
+                                                        value="{{obj.id_mothertongue}}">
                                                     {{obj.mothertongue}}
                                                 </option>
                                             </select>
