--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -47,12 +47,12 @@
                     <div class="col-md-8 margin-right-30">
                             <div class="col-md-4">
 
-                                    <input type="radio" name="gender" ng-model="reg.gender" value="MALE" ng-model="candidate.gender"
+                                    <input type="radio" name="gender" ng-model="reg.gender" value="male" ng-model="candidate.gender"
                                            checked> Male </input>
                             </div>
                             <div class="col-md-4">
 
-                                    <input type="radio" name="gender"   value="FEMALE"
+                                    <input type="radio" name="gender"   value="female"
                                            ng-model="reg.gender"> Female</input>
                         </div>
 
