--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -91,9 +91,21 @@
                         </div>
                         <div class="portlet-body form">
                             <div class="row">
-                                <div class="col-md-3" style="text-align: center;margin-bottom: 10px">
-                                    <img style="height: 150px"
-                                         ng-src="../assets/images/prof1.jpg"/>
+                                <div class="col-md-3" style="text-align: center;background-color: #eaeef1">
+
+                                    <div style="width: 100%;margin-bottom: 10px;margin-top: 10px;line-height: 150px">
+                                        <span class="pull-left ">
+                                            <a href="javascript:;" class="btn btn-icon-only default">
+                                            <i class="icon-control-rewind"></i>
+                                        </a></span>
+                                        <span><img style="height: 130px;"
+                                                   ng-src="../assets/images/prof1.jpg"/></span>
+                                        <span class="pull-right">
+                                            <a href="javascript:;" class="btn btn-icon-only default">
+                                            <i class="icon-control-forward"></i>
+                                        </a>
+                                        </span>
+                                    </div>
                                 </div>
                                 <div class="col-md-9">
                                     <div class="row" >
