--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -92,8 +92,8 @@
                         <div class="portlet-body form">
                             <div class="row">
                                 <div class="col-md-3" style="text-align: center;">
-
-                                    <div style="width: 100%;margin-bottom: 10px;margin-top: 10px;line-height: 150px">
+                                    <userinfo user="images"></userinfo>
+                                   <!-- <div style="width: 100%;margin-bottom: 10px;margin-top: 10px;line-height: 150px">
                                         <span ng-if="images.length > 0" class="pull-left ">
                                             <a ng-click="imageBackward()" class="btn-circle  default">
                                             <i class="icon-control-rewind"></i>
@@ -105,7 +105,7 @@
                                             <i class="icon-control-forward"></i>
                                         </a>
                                         </span>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <div class="col-md-9">
                                     <div class="row" >
