--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -92,7 +92,7 @@
                         <div class="portlet-body form">
                             <div class="row">
                                 <div class="col-md-3" style="text-align: center;">
-                                    <userinfo user="images"></userinfo>
+                                    <userinfo user="images" gender="item.gender"></userinfo>
                                    <!-- <div style="width: 100%;margin-bottom: 10px;margin-top: 10px;line-height: 150px">
                                         <span ng-if="images.length > 0" class="pull-left ">
                                             <a ng-click="imageBackward()" class="btn-circle  default">
