image -directive created

--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -92,20 +92,8 @@
                         <div class="portlet-body form">
                             <div class="row">
                                 <div class="col-md-3" style="text-align: center;">
-                                    <userinfo user="images" gender="item.gender"></userinfo>
-                                   <!-- <div style="width: 100%;margin-bottom: 10px;margin-top: 10px;line-height: 150px">
-                                        <span ng-if="images.length > 0" class="pull-left ">
-                                            <a ng-click="imageBackward()" class="btn-circle  default">
-                                            <i class="icon-control-rewind"></i>
-                                        </a></span>
-                                        <span><img style="height: 150px;"
-                                                   ng-src="{{images[0].image}}"/></span>
-                                        <span class="pull-right">
-                                            <a ng-click="imageForward()" class="btn-circle  default">
-                                            <i class="icon-control-forward"></i>
-                                        </a>
-                                        </span>
-                                    </div>-->
+                                    <imageinfo images="item.images" gender="item.gender"></imageinfo>
+
                                 </div>
                                 <div class="col-md-9">
                                     <div class="row" >
